--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,18 @@
-.App {
+body {
+  background-color: pink;
+}
+
+h1 {
+  color: Black;
   text-align: center;
+  font-size: 3vw;
+  font-weight: 1000;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+h2 {
+  color: Yellow;
+  text-align: left;
+  font-size: 2vw;
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
